--- a/index.html
+++ b/index.html
@@ -211,11 +211,8 @@ Chào mừng đến với không gian nơi tri thức tự phát sáng.</p>
                     </div>
                 
                     <div class="gr3">
-                        <img src="resource/image/Thuyettuongdoi/Char_Enstein.jpg" alt="enstein">
-                        <div class="conner" style="rotate: 0deg;">
-                        </div>
-                         <div class="conner" style="rotate: 180deg;">
-                        </div>
+                        <img src="resource/image/Thuyettuongdoi/Char_enstein.png" alt="enstein">
+                        
                         <h1>
                             Albert Einstein
                         </h1>
