--- a/index.html
+++ b/index.html
@@ -56,15 +56,17 @@
                 <h1>
                     Tổng quan
                 </h1>
+                <div id="change-card">
                 <div id="intro-sr-card">
-                    <h2 id="intro-sr-title">Thuyết tương đối hẹp</h1>
+                    <h2 id="intro-sr-title">Thuyết tương đối hẹp</h2>
                     <p id="intro-sr-description">Là nền tảng cho nhiều tiến bộ trong vật lý hiện đại. Tập trung vào các hiện tượng xảy ra khi vận tốc gần bằng tốc độ ánh sáng và không có tác động của trọng lực.</p>
-                    <img src="resource/image/Thuyettuongdoi/Law_tuongdoihep.png" alt="thuyettuongdoihep">
+                    <img id="intro-sr-img" src="resource/image/Thuyettuongdoi/Law_tuongdoihep.png" alt="thuyettuongdoihep">
                 </div>
                 <div id="intro-gl-card">
-                    <h2 id="intro-gl-title">Thuyết tương đối rộng</h1>
+                    <h2 id="intro-gl-title">Thuyết tương đối rộng</h2>
                     <p id="intro-gl-description">Mở rộng nguyên lý của thuyết hẹp, mô tả trọng lực như sự cong của không-thời gian do vật chất và năng lượng gây ra.</p>
                     <img src="resource/image/Thuyettuongdoi/Law_tuongdoirong.png" alt="thuyettuongdoirong">
+                </div>
                 </div>
                 <button id="intro-sr-btn">Thuyết tương đối hẹp</button>
                 <button id="intro-gl-btn">Thuyết tương đối rộng</button>
