--- a/index.html
+++ b/index.html
@@ -53,24 +53,23 @@
         </header>
         <main>
             <section id="intro-section">
-                <h1>
-                    Tổng quan
-                </h1>
-                <div id="change-card">
+
+                
                 <div id="intro-sr-card">
-                    <h2 id="intro-sr-title">Thuyết tương đối hẹp</h2>
-                    <p id="intro-sr-description">Là nền tảng cho nhiều tiến bộ trong vật lý hiện đại. Tập trung vào các hiện tượng xảy ra khi vận tốc gần bằng tốc độ ánh sáng và không có tác động của trọng lực.</p>
-                    <img id="intro-sr-img" src="resource/image/Thuyettuongdoi/Law_tuongdoihep.png" alt="thuyettuongdoihep">
+                    <div id="intro-sr-img"></div>
+                    <h2 id="intro-sr-title" >Thuyết tương đối hẹp</h2>
+                    <p id="intro-sr-description" >Là nền tảng cho nhiều tiến bộ trong vật lý hiện đại. Tập trung vào các hiện tượng xảy ra khi vận tốc gần bằng tốc độ ánh sáng và không có tác động của trọng lực.</p>
                 </div>
                 <div id="intro-gl-card">
-                    <h2 id="intro-gl-title">Thuyết tương đối rộng</h2>
-                    <p id="intro-gl-description">Mở rộng nguyên lý của thuyết hẹp, mô tả trọng lực như sự cong của không-thời gian do vật chất và năng lượng gây ra.</p>
-                    <img src="resource/image/Thuyettuongdoi/Law_tuongdoirong.png" alt="thuyettuongdoirong">
+                    <div id="intro-gl-img"></div>
+
+                    <h2 id="intro-gl-title" >Thuyết tương đối rộng</h2>
+                    <p id="intro-gl-description" >Mở rộng nguyên lý của thuyết hẹp, mô tả trọng lực như sự cong của không-thời gian do vật chất và năng lượng gây ra.</p>
                 </div>
-                </div>
+                <!--
                 <button id="intro-sr-btn">Thuyết tương đối hẹp</button>
                 <button id="intro-gl-btn">Thuyết tương đối rộng</button>
-                <h2>Cuộn để tiếp tục khám phá</h2>
+                <h2>Cuộn để tiếp tục khám phá</h2>-->
             </section>
             <!----------------------------------------------------------------------------thuyet tuong doi hep---------------------------------------------------------------------->
             <section id="special-relativity">
